 syntax = "proto3";

package manager;

option go_package = "./v1;v1";

import "validate/validate.proto";


message DictValue {
  uint32 id = 1;
  uint32 dict_id = 2;
  string label = 3;
  string value = 4;
  bool status = 5;
  optional uint32 weight = 6;
  string type = 7;
  string extra = 8;
  string description = 9;
  optional uint32 created_at = 10;
  optional uint32 updated_at = 11;
}

message PageDictValueRequest{
  uint32 page = 1[(validate.rules).uint32 = {gt: 0}];
  uint32 page_size = 2[(validate.rules).uint32 = {gt: 0,lte:50}];
  optional string label = 3;
  optional string value = 4;
}

message PageDictValueReply{
  uint32 total = 1;
  repeated DictValue list = 2;
}

message AddDictValueRequest{
  uint32 dict_id = 2[(validate.rules).uint32 = {gt:0}];
  string label = 3[(validate.rules).string = {min_len:1}];
  string value = 4[(validate.rules).string = {min_len:1}];
  optional string type = 5;
  optional string extra = 6;
  optional string description = 7;
  optional uint32 weight = 8;
  optional bool status = 9;
}

message UpdateDictValueRequest{
  uint32 id = 1[(validate.rules).uint32 = {gt:0}];
  uint32 dict_id = 2[(validate.rules).uint32 = {gt:0}];
  string label = 3[(validate.rules).string = {min_len:1}];
  string value = 4[(validate.rules).string = {min_len:1}];
  optional string type = 5;
  optional string extra = 6;
  optional string description = 7;
  optional uint32 weight = 8;
  optional bool status = 9;
}

message DeleteDictValueRequest{
  uint32 id = 1[(validate.rules).uint32 = {gt:0}];
}
